--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -11,8 +11,8 @@
 <body>
   <header>
     <h1>White Water Rafting Site Plan</h1>
-    <h2>[FirstName LastName]</h2>
-    <h2>WDD 130-[section]</h2>
+    <h2>Tyler Driggs</h2>
+    <h2>WDD 130-4</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -20,18 +20,18 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>Customers wanting fto raft will be pleasently surprised</p>
+    <p>Customers wanting to raft will be assured to have fun going down the Yottenheim River</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>Youngins</p>
+    <p>Anyone capable of sitting down, getting wet, and moving their arms in a circular motion</p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
+    <img src="https://byui-wdd.github.io/wdd130/resources/images/logos/activehi.jpg" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -42,8 +42,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
-      target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+    <a href="https://coolors.co/154068-ded8ae-3682b5-7cabcc-906a0b"
+      target="_blank">https://coolors.co/154068-ded8ae-3682b5-7cabcc-906a0b</a>
 
     <table class="colors">
       <tr>
@@ -54,10 +54,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
-        <td class="accent2"></td>
+        <td class="primary">[#154068]</td>
+        <td class="secondary">[#ded8ae]</td>
+        <td class="accent1">[#3682b5]</td>
+        <td class="accent2">[7cabcc]</td>
       </tr>
     </table>
 
