--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -78,8 +78,7 @@
     <p>
       The best Whitewater Rafting in Colorado, White Water Rafting Company
       offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
-      Springs. Since 1974, we have been family owned and operated, rafting the
-      Shoshone section of Glenwood Canyon and beyond.
+      Springs. Since 1974, we have been family owned dedicated to giving everyone everything they want and beyond.
     </p>
     <h3>Colored paragraph example</h3>
     <p class="colored">
