--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -47,7 +47,7 @@
 
     <table class="colors">
       <tr>
-        <th>Primary</th>
+        <th>Primay</th>
         <th>Secondary</th>
         <th>Accent 1</th>
         <th>Accent 2</th>
