--- a/byui.html
+++ b/byui.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BYUI Page</title>
+    <title>BYUI</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="https://www.churchofjesuschrist.org/?lang=eng"> Church of Jesus Christ</a>
-            <a href="https://www.churchofjesuschrist.org/temples?lang=eng"> Temples</a>
-            <a href="https://www.churchofjesuschrist.org/study/scriptures?lang=eng&platform=web"> Scriptures</a>
+            <a id='active' href="byui.html">Home</a>
+            <a href="https://www.churchofjesuschrist.org" target="_blank">Church of Jesus Christ</a>
+            <a href="https://www.churchofjesuschrist.org/temples">Temples</a>
+            <a href="https://www.churchofjesuschrist.org/study/scriptures">Scriptures</a>
         </nav>
     </header>
     <main>
-        <h1>Brigham Young University - Idaho        </h1>
-        <p>BYUI is a decent place to learn and a </p>
-        <img src="https://www.byui.edu/images/admissions/Campus_Arial_View.jpg" alt="Campus_Arial_View" width="800">
-    </main> 
+        <h1>Brigham Young University Idaho</h1>
+        <img src="https://www.byui.edu/images/service-sites/map-banner.jpg">
+        
+        <p class="para">BYU-Idaho is a comfortable place to learn and grow as a disciple of Jesus Christ because students, faculty, and employees share a commitment to live the gospel.</p>
+        <p class="para">BYU-Idaho is a comfortable place to learn and grow as a disciple of Jesus Christ because students, faculty, and employees share a commitment to live the gospel.</p>
+        <p class="para">BYU-Idaho is a comfortable place to learn and grow as a disciple of Jesus Christ because students, faculty, and employees share a commitment to live the gospel.</p>
+    </main>
     <footer>
-
+        <p>My Web Page 20XX &copy</p>
     </footer>
 </body>
 </html>
