--- a/byui.html
+++ b/byui.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>BYUI</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/styles_byui.css">
 </head>
 <body>
     <header>
