--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,39 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css"> 
     <title>Home Page</title>
 </head>
 <body>
-    <header>
-        <a id="logo_link" href="index.html">
-            <img class="logo" src="images/logo.jpg" alt="Active Heights Logo">
-        </a>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
-            <a href="site-plan-rafting.html">Site Plan</a>
-            <a href="contactus.html">Contact Us</a>
-        </nav>
-    </header>
-    <div id="hero">
-        <div id="hero-box">
-            <img id="hero-img" src="images/hero.jpg" alt="People enjoying rafting">
-        </div>
-        <section id="hero-msg">
-            <h1 class="home-title">Have An Adventure</h1>
-            <h4>Make Memories with Active Heights</h4>
+    <div id="content">
+        <header>
+            <a id="logo_link" href="index.html">
+                <img class="logo" src="images/logo.jpg" alt="Active Heights Logo">
+         </a>
+            <nav>
+             <a href="index.html">Home</a>
+                <a href="#">Page 2</a>
+             <a href="site-plan-rafting.html">Site Plan</a>
+                <a href="contactus.html">Contact Us</a>
+            </nav>
+        </header>
+        <div id="hero">
+                <div id="hero-box">
+                <img id="hero-img" src="images/rapids.jpg" alt="People enjoying rafting">
+            </div>
+            <section id="hero-msg">
+                <h1 class="home-title">Have An Adventure</h1>
+                <h4>Make Memories with Active Heights</h4>
             <div class="button-box">
                 <a class="book" href="rates.html">Book Now</a>
             </div>
         </section>
     </div>
+    <div id="background"></div>
     <main class="home-grid">
         <section class="rivers-card">
             <img class="card-img" src="images/rivers.jpg" alt="river in forest">
             <img class="icon" src="images/river_icon.png" alt="river icon">
         </section>
          <section class="camping-card">
-            <img class="card-img" src="images/camping.png" alt="tent in mountains">
+            <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
             <img class="icon" src="images/fire_icon.png" alt="fire icon">
             <h2>Camping</h2>
         </section>
@@ -57,8 +60,17 @@
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href=contactus.html>Contact Us</a></p>
         <div class="social">
-            <a href="https"
+            <a href="https://facebook.com" target="_blank">
+                <img src="images/facebook.png" alt="facebook icon">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+                <img src="images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com" target="_blank">
+                <img src="images/instagram.png" alt="instagram icon">
+            </a>
         </div>
     </footer>
+</div>
 </body>
 </html>
