--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Portal Page</h1>
     <a href = "wwr/site-plan-rafting.html">Site Plan</a>
+    <a href="positioning.html">Postitioning</a>
 </body>
 </html>
 
