--- a/wwr/index.html
+++ b/wwr/index.html
@@ -14,15 +14,15 @@
                 <img class="logo" src="images/logo.jpg" alt="Active Heights Logo">
          </a>
             <nav>
-             <a href="index.html">Home</a>
+                <a href="index.html">Home</a>  
                 <a href="#">Page 2</a>
-             <a href="site-plan-rafting.html">Site Plan</a>
+                <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
         <div id="hero">
                 <div id="hero-box">
-                <img id="hero-img" src="images/rapids.jpg" alt="People enjoying rafting">
+                <img id="hero-img" src="images/tftdwt.jpeg" alt="People enjoying rafting">
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">Have An Adventure</h1>
@@ -37,6 +37,7 @@
         <section class="rivers-card">
             <img class="card-img" src="images/rivers.jpg" alt="river in forest">
             <img class="icon" src="images/river_icon.png" alt="river icon">
+            <h2>River</h2>
         </section>
          <section class="camping-card">
             <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
