--- a/tylers_takes/site-plan.html
+++ b/tylers_takes/site-plan.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <a id="logo_link" href="index.hmtl">
-                <img src="pics/logo.jpg" alt="Tyler's Takes">
+                <img src="pics/rsz_logo.jpg" alt="Tyler's Takes">
             </a>
             <a href="site-plan.html">Home Page</a>
             <a href="weekly-watch.html">Weekly Watch</a>
@@ -27,7 +27,7 @@
         <h2>Audience</h2>
         <p>Anyone who wants a 18 year old's opinion with no fancy certifications on TV shows that will waste time and rot brain cells.</p>
     </div>
-    <p>Palette URL:</p>
+    <h2>Palette URL:</h2>
     <a href="https://coolors.co/e91e26-050404-670e11-361416"
       target="_blank">https://coolors.co/e91e26-050404-670e11-361416</a>
     <h2>Heading Font: Bebas Neue</h2>
