--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
 </head>
 <body>
     <h1>Portal Page</h1>
-    <a href = "wwr/site-plan-rafting.html">Site Plan</a>
-    <a href="wwr/index.html">White water rafting home Page</a>
-    <a href="positioning.html">Postitioning</a>
-    <a href="tylers_takes/site-plan.html">Personal Page Site Plan</a>
+    <a href = "wwr/site-plan-rafting.html">Site Plan
+
+    </a>
+    <a href="wwr/index.html">White water rafting home Page
+
+    </a>
+    <a href="positioning.html">Postitioning
+
+    </a>
+    <a href="tylers_takes/site-plan.html">Personal Page Site Plan
+        
+    </a>
 </body>
 </html>
 
