--- a/tylers_takes/site-plan.html
+++ b/tylers_takes/site-plan.html
@@ -32,6 +32,10 @@
       target="_blank">https://coolors.co/e91e26-050404-670e11-361416</a>
     <h2>Heading Font: Bebas Neue</h2>
     <p>Body Font: Roboto Condensed</p>
+
+    <h2>Site Plan </h2>
+    <h4>Home Page</h4>
+        <img src="pics/tt_siteplan.jpg"alt="Site Plan">
 <!--
 
     <div id="AoT">
