--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -7,7 +7,7 @@
     <style>
     form {
         /* Center the form on the page */
-        margin: 0 auto;
+        margin: auto;
         width: 400px;
         /* Form outline */
         padding: 1em;
@@ -78,63 +78,63 @@
     right: 0;
     padding: .5em;
     /* make this element invisible until we are ready for it */
-    display: none;      
+        display: none;      
     }
     .moveDown {
-    margin-top: 3em;
+        margin-top: 3em;
     }
     header{
-    background-color: rgba(124, 171, 204, .5);
-    padding: 20px;
-    font-size: 18px;
-    display: grid;
-    grid-template-columns: 150px auto;
+        background-color: rgba(124, 171, 204, .5);
+        padding: 20px;
+        font-size: 18px;
+        display: grid;
+        grid-template-columns: 150px auto;
     
-}
-nav{
-    display: flex;
-    justify-content: space-around;
-    text-decoration: none;
-}
-nav a:hover{
-    text-align: center;
-    color:black;
-    background-color: #ded8ae;
-    text-decoration: none;
-    padding:15px;
+    }
+    nav{
+        display: flex;
+        justify-content: space-around;
+        text-decoration: none;
+    }
+    nav a:hover{
+        text-align: center;
+        color:black;
+        background-color: #ded8ae;
+        text-decoration: none;
+        padding:15px;
 
-}
-.logo{
-    width:80px;
-}
-footer{
-    text-decoration: none;
-    padding:25px 50px;
-    margin-top: 200px;
-    display:flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: rgba(124, 171, 204, .5);
-}
-footer p{
-    font-size: 1.2em;
-}
-footer p a:hover{
-    text-decoration: underline;
-}
-footer .social{
-    padding-top: 15px;
-}
- #hero, .home-grid {
-    display: block;
-    height: auto;
-}
-nav a {
-    display: block;
-    padding: 15px;
-}
+    }
+    .logo{
+        width:80px;
+    }
+    footer{
+        text-decoration: none;
+        padding:25px 50px;
+        margin-top: 200px;
+        display:flex;
+        justify-content: space-around;
+        align-items: center;
+        background-color: rgba(124, 171, 204, .5);
+    }
+    footer p{
+        font-size: 1.2em;
+    }
+    footer p a:hover{
+        text-decoration: underline;
+    }
+    footer .social{
+        padding-top: 15px;
+    }
+     #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
     </style>
-    <title>Home Page</title>
+    <title>Contact Us | Active Heights</title>
 </head>
 <body>
     <div id="content">
