--- a/tylers_takes/site-plan.html
+++ b/tylers_takes/site-plan.html
@@ -11,9 +11,8 @@
 <body>
     <header>
         <nav>
-            <a id="logo_link" href="index.hmtl">
-                <img src="pics/rsz_logo.jpg" alt="Tyler's Takes">
-            </a>
+            <a id="logo_link" href="index.html">
+                <img src="pics/rsz_logo.jpg" alt="Tyler's Takes Logo"></a>
             <a href="site-plan.html">Home Page</a>
             <a href="weekly-watch.html">Weekly Watch</a>
             <a></a>
@@ -36,16 +35,9 @@
     <h2>Site Plan </h2>
     <h4>Home Page</h4>
         <img src="pics/tt_siteplan.jpg"alt="Site Plan">
-<!--
-
-    <div id="AoT">
-        <section class="AoT logo">
-            <img src="pics/AoT.jpg" alt="Attack on Titan">
-        </section>
-        <section class="">
-
-        </section>
-    </div>
-    -->
-</body>
+    <h4>Page 2</h4>
+        <img src="pics/review_plan.jpg" alt="Review Site Plan">
+    <h4>Page 3</h4>
+        <img src="pics/page_3.jpg" alt="Page 3 Site Plan">
+    </body>
 </html>
