--- a/tylers_takes/index.html
+++ b/tylers_takes/index.html
@@ -13,9 +13,8 @@
             <nav>
                 <a id="logo_link" href="index.html">
                     <img src="pics/rsz_logo.jpg" alt="Tyler's Takes Logo"></a>
-                <a href="site-plan.html">Home Page</a>
-                <a href="weekly-watch.html">Weekly Watch</a>
-                <a></a>
+                <a class="plan" href="site-plan.html">Home Page</a>
+                <a class="watch" href="weekly-watch.html">Weekly Watch</a>
             </nav>  
         </header>
         
@@ -43,12 +42,25 @@
             </div>
         </section>
         <footer>
-            <p>
-                <a href="recommend.html">Recommend to Tyler for a  Take</a>
+            <p class="copy">
+                Tyler's Takes &copy; 2022 - Tyler Driggs
             </p>
-            <p>
-                
+            <p class="recommend">
+                If you want a specific take, email me at recommend.tyler.takes@gmail.com
             </p>
+            <div id="pics">
+                <a class="facebook" href="https://facebook.com" target="_blank">
+                    <img src="pics/facebook.png" alt="facebook"></a>
+                <a class="twitter" href="https://twitter.com" target="_blank">
+                    <img src="pics/twitter.png" alt="twitter icon">
+                </a>
+                <a class="instagram" href="https://instagram.com" target="_blank">
+                    <img src="pics/instagram.png" alt="instagram icon">
+                    </a>
+                <a class="foot_logo" href="index.html">
+                    <img src="pics/rsz_rsz_logo.jpg" alt="Tyler's Takes Logo">
+                </a>
+        </div>
         </footer>
     </section>
 </body>
