--- a/tylers_takes/psych_review.html
+++ b/tylers_takes/psych_review.html
@@ -17,6 +17,12 @@
                 <a></a>
             </nav>  
         </header>
-        <
+        <img class="main_pic" src="pics/psych_banner.jpg" alt="Psych Banner Picture">
+        <h2>Tyler's Take on Psych</h2>
+        <div class="overview">
+            <p>
+                You've heard about Brooklyn 99, Law and Order, Criminal Minds, and Magnum P.I. Now get ready for easily the best crime show on TV, Psych. This is the show that dominated TV during its whole running, and rightfully so. The main character is named Shawn Spencer. His father, Henry, was obsessed with making Shawn the best detective ever, teaching him from a very young age things like how to trick a lie detector, escape from the trunk of a car, and how many hats are in the room (if you know you know). 
+                </p>
+        </div>
 </body>
 </html>
