--- a/tylers_takes/index.html
+++ b/tylers_takes/index.html
@@ -43,7 +43,7 @@
         </section>
         <footer>
             <p class="copy">
-                Tyler's Takes &copy; 2022 - Tyler Driggs
+                Tyler's Takes &copy; 2022 - Tyler Drigg
             </p>
             <p class="recommend">
                 If you want a specific take, email me at recommend.tyler.takes@gmail.com
