--- a/tylers_takes/index.html
+++ b/tylers_takes/index.html
@@ -42,6 +42,7 @@
             </div>
         </section>
         <footer>
+            <div class="line"><p></p></div>
             <p class="copy">
                 Tyler's Takes &copy; 2022 - Tyler Drigg
             </p>
