--- a/tylers_takes/index.html
+++ b/tylers_takes/index.html
@@ -44,7 +44,7 @@
         <footer>
             <div class="line"><p></p></div>
             <p class="copy">
-                Tyler's Takes &copy; 2022 - Tyler Drigg
+                Tyler's Takes &copy; 2022 - Tyler Driggs
             </p>
             <p class="recommend">
                 If you want a specific take, email me at recommend.tyler.takes@gmail.com
