--- a/tylers_takes/index.html
+++ b/tylers_takes/index.html
@@ -21,7 +21,7 @@
         <div class="takes">
             <h2>Tyler's Top Takes</h2>
         </div>
-        <section id="show_takes">
+        <div id="show_takes">
             <div id="aot">
                 <img class="aot_img" src="pics/AoT.jpg" alt="Attack on Titan">
                 <p>
@@ -40,7 +40,7 @@
                     Wandavision is the first show made by Marvel in Phase 4. It follows a grief-stricken Wanda Maximoff trying to cope with the loss of Vision after what happened in Avengers: Endgame. Click for a more in-depth review. --->
                 </p></a>
             </div>
-        </section>
+        </div>
         <footer>
             <div class="line"><p></p></div>
             <p class="copy">
