--- a/tylers_takes/index.html
+++ b/tylers_takes/index.html
@@ -14,7 +14,7 @@
                 <a id="logo_link" href="index.html">
                     <img src="pics/rsz_logo.jpg" alt="Tyler's Takes Logo"></a>
                 <a class="plan" href="site-plan.html">Home Page</a>
-                <a class="watch" href="weekly-watch.html">Weekly Watch</a>
+                <a class="watch" href="weekly-watch.html">Weekly Watch(Under construction)</a>
             </nav>  
         </header>
         
