--- a/tylers_takes/psych_review.html
+++ b/tylers_takes/psych_review.html
@@ -18,11 +18,23 @@
             </nav>  
         </header>
         <img class="main_pic" src="pics/psych_banner.jpg" alt="Psych Banner Picture">
-        <h2>Tyler's Take on Psych</h2>
-        <div class="overview">
-            <p>
-                You've heard about Brooklyn 99, Law and Order, Criminal Minds, and Magnum P.I. Now get ready for easily the best crime show on TV, Psych. This is the show that dominated TV during its whole running, and rightfully so. The main character is named Shawn Spencer. His father, Henry, was obsessed with making Shawn the best detective ever, teaching him from a very young age things like how to trick a lie detector, escape from the trunk of a car, and how many hats are in the room (if you know you know). 
-                </p>
+        <h1>Tyler's Take on Psych</h1>
+        <div id="overview"> 
+            <h2>Summary</h2>
+            <p class="compare">
+            You've heard about Brooklyn 99, Law and Order, Criminal Minds, and Magnum P.I. Now get ready for easily the best crime show on TV, Psych. This is the show that dominated TV during its whole running, and rightfully so. The main character is named Shawn Spencer, played by James Roday Rodriguez, who solves crimes using his heightened observational skills and eidetic memory, a close cousin to the photographic one. But the show wouldn't be complete without someone to share Shawn's brain cell, that person is Burton “Gus” Guster, played by Dule Hill. His best friend from childhood, Shawn and Gus are the perfect representation of best friends, and to be totally fair, probably the best representation of best friends ever represented on TV. 
+            </p>
+            <p class="family">
+            The best way to describe the character relationships in Psych is as a lovable family. Shawn and Gus are a pair of rowdy twins, Detective Juliet O'Hara, played by Maggie Lawson, is the protective and loving middle sister, and Carlton Lassiter, played by Timothy Omundson, is the strict older brother that wants things done by the book. The mother is Police Chief Karen Vick, played by Kirsten Nelson, and the cranky grandpa is Henry Spencer, played by Corbin Bernsen. 
+            </p>
+            <p class="start">
+            Psych starts with Shawn calling in a tip to the police station that is so good it could only come from the inside. In a desperate attempt to get out of prison, Shawn uses his ability to convince the SBPD that he is a psychic. He then enlists the help of Gus to do things including and certainly not limited to a solve supposed dinosaur attack, saving an American Idol rip-off show, rescuing a stolen mummy, starring in a telenovela, ridding Lassiter's apartment of ghosts, 
+            </p>
+            <h2>Tyler's Take</h2>
+            <p class="take">
+            There are very few show that I will watch repeatedly. Psych is 100% one of those shows. Straight up, there hasn't been a single show that made me care more about the characters and laugh out loud repeatedly at the same episodes. There are so many different bits that are hidden in the show, like giving Gus random silly nicknames such as, “Schoonie U-Turn Singleton”, “Methuselah Honeysuckle”, “Ghee Buttersnaps”, to the appearance of a pineapple in almost every episode. This show is more entertaining than a series of Biden Gaffes. 
+            </p>
+            
         </div>
 </body>
 </html>
