--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
 <body>
     <h1>Portal Page</h1>
     <a href = "wwr/site-plan-rafting.html">Site Plan
-
     </a>
+    <p></p>
     <a href="wwr/index.html">White water rafting home Page
-
     </a>
+    <p></p>
     <a href="positioning.html">Postitioning
-
     </a>
+    <p></p>
     <a href="tylers_takes/site-plan.html">Personal Page Site Plan
-        
     </a>
+    <p></p>
+    <a href="component.html">Accordion Component</a>
+    <p></p>
 </body>
 </html>
 
