--- a/tylers_takes/psych_review.html
+++ b/tylers_takes/psych_review.html
@@ -32,9 +32,11 @@
             </p>
             <h2>Tyler's Take</h2>
             <p class="take">
-            There are very few show that I will watch repeatedly. Psych is 100% one of those shows. Straight up, there hasn't been a single show that made me care more about the characters and laugh out loud repeatedly at the same episodes. There are so many different bits that are hidden in the show, like giving Gus random silly nicknames such as, “Schoonie U-Turn Singleton”, “Methuselah Honeysuckle”, “Ghee Buttersnaps”, to the appearance of a pineapple in almost every episode. This show is more entertaining than a series of Biden Gaffes. 
+            There are very few show that I will watch repeatedly. Psych is 100% one of those shows. Straight up, there hasn't been a single show that made me care more about the characters and laugh out loud repeatedly at the same episodes. There are so many different bits that are hidden in the show, like giving Gus random silly nicknames such as, “Schoonie U-Turn Singleton”, “Methuselah Honeysuckle”, “Ghee Buttersnaps”, to the appearance of a pineapple in almost every episode. This show is more entertaining than a series of Biden Gaffes. The show boasts a vary large amount of A-lister guest stars including Ally Sheedy, Val Kilmer, Judd Nelson, John Cena, Kenan Thompson, Cary Elwes, and Corbin Bleu.
             </p>
-            
+            <p>
+                I rate this show, wait of iiiiiiiit, 69 out of 10 pineapples. This show is so good that it even inspired a spin-off show called The Mentalist with the same plot, fake psychic is hired by police to solve crimes. What makes this show so spectacular is how the actors care about each other, on and off the screen. When Timothy Omundson had his stroke in 2017, right before the filming of the first of three psych movies, Steve Franks (creator) and James Roday Rodriguez(Shawn) rewrote the entire script to make sure that Tim was involved. Not to mention the fact that James and Maggie Lawson, who plays Juliet O'Hara, were in a romantic relationship throughout the entirety of filming, and continue to work together on their animal charity, The Tiger Frances Foundation. There are very few shows that have a group of actors this close as Psych, and not only that, but they all welcome their fans with open arms and love them almost as much as their fans love the show. They honored one of their fan's Christina Grimmie who was tragically shot. All in all, this is one of the best shows out there. Highly recommend.  
+            </p>
         </div>
 </body>
 </html>
