--- a/tylers_takes/index.html
+++ b/tylers_takes/index.html
@@ -12,9 +12,10 @@
         <header>
             <nav>
                 <a id="logo_link" href="index.html">
-                    <img src="pics/rsz_logo.jpg" alt="Tyler's Takes Logo"></a>
-                <a class="plan" href="site-plan.html">Home Page</a>
+                    <img class="logo" src="pics/rsz_logo.jpg" alt="Tyler's Takes Logo"></a>
+                <a class="index" href="index.html">Home Page</a>
                 <a class="watch" href="weekly-watch.html">Weekly Watch(Under construction)</a>
+                <a class="plan" href="site-plan.html">Site Plan</a>
             </nav>  
         </header>
         
