--- a/tylers_takes/site-plan.html
+++ b/tylers_takes/site-plan.html
@@ -13,9 +13,9 @@
         <nav>
             <a id="logo_link" href="index.html">
                 <img src="pics/rsz_logo.jpg" alt="Tyler's Takes Logo"></a>
-            <a href="site-plan.html">Home Page</a>
+            <a href="index.html">Home Page</a>
             <a href="weekly-watch.html">Weekly Watch</a>
-            <a></a>
+            <a href="site-plan.html">Site Plan</a>
         </nav>   
     </header>
     <div id="Purpose">
