--- a/tylers_takes/psych_review.html
+++ b/tylers_takes/psych_review.html
@@ -16,9 +16,7 @@
                 <a class="index" href="index.html">Home Page</a>
                 <a class="watch" href="weekly-watch.html">Weekly Watch(Under construction)</a>
                 <a class="plan" href="site-plan.html">Site Plan</a>
-            </nav>  
-        </header>
-            </nav>  
+            </nav>   
         </header>
         <img class="psych_banner" src="pics/psych_banner.jpg"  alt="Psych Banner Picture">
         <div id="overview"> 
@@ -40,7 +38,7 @@
 
                     Only a few shows influence the way I view the world, and I'm not talking about shows that make stupid political statements that cater to the loud SJW types. Each of the relationships in Psych is portrayed in the most human aspect possible, making it possible to find aspects of yourself in every single characters. They are honestly the best representations of relationships that I have ever seen in  modern television. What makes it even better is how each character isn't just some sterotype, they feel like actual people. Right from the start it is super easy to 
                     </p>
-                    <img class="pineapple" src="pics/psych_pineapple.jpg">
+                    <img class="pineapple" src="pics/psych_pineapple.jpg" alt="pineapple and jokes">
                 <p>
                     There are very few show that I will watch repeatedly. Psych is 100% one of those shows. Straight up, there hasn't been a single show that made me care more about the characters and laugh out loud repeatedly at the same episodes. There are so many different bits that are hidden in the show, like giving Gus random silly nicknames such as, “Schoonie U-Turn Singleton”, “Methuselah Honeysuckle”, “Ghee Buttersnaps”, to the appearance of a pineapple in almost every episode to certain words that become a running joke(see right). This show is more entertaining than a series of Biden Gaffes. 
                 Psych boasts a series of A-lister guest stars including and certainly not limited to. Ally Sheedy, Val Kilmer, Judd Nelson, John Cena, Kenan Thompson, Cary Elwes, William Shatner, and Corbin Bleu.
@@ -73,5 +71,6 @@
                 </a>
         </div>
         </footer>
+    </section>
 </body>
 </html>
